# mod-lab03-coffee

./: CMakeLists.txt
.github/workflows/: release.yml
include/: Automata.h
src/: Automata.cpp  main.cpp
test/: tests.cpp
